Remove unnecessary method and constructors